@@ -1,5 +1,3 @@
 DIST kadu-0.6.0.1.tar.bz2 1566609 RMD160 06709d16dd84a10c917fb12ee3dd06eb4ef18879 SHA1 727c5b25b7178f8d947497182da6817c170b7d6a SHA256 5b022f3043b112bbba6115bdf2877ff01d6b3b1342d74db5977fa92b1662d68c
-DIST kadu-0.6.0.tar.bz2 1583937 RMD160 d53830b98b6485924ad3076694b1db78121b1c2b SHA1 ff5cdd0daa9f9de795cbfe15e163b358a9ee55e2 SHA256 f0e31b5ef00c64cad75a43220842b5564b8ec1dfd0c4481f0f3ac8b88fb9e752
 EBUILD kadu-advanced_userlist-0.6.0.1.ebuild 226 RMD160 2fb9ce96f5f9a54c4f7218c834cbe9e10be78453 SHA1 92166e5700d96bbcf2153bdf0932747dd613eb6d SHA256 0cb7c75a185267b5fa52360bb7a253853536085c2bdb9c39f03b18380677641d
-EBUILD kadu-advanced_userlist-0.6.0.ebuild 226 RMD160 2fb9ce96f5f9a54c4f7218c834cbe9e10be78453 SHA1 92166e5700d96bbcf2153bdf0932747dd613eb6d SHA256 0cb7c75a185267b5fa52360bb7a253853536085c2bdb9c39f03b18380677641d
-MISC ChangeLog 232 RMD160 4cec5e45498c9136a4f09ea120610ab8119506f2 SHA1 65b981d5638f9203f152fb75535cf3069d3beb41 SHA256 80212cf3c02ccd3de672e3029cc19794a2258296b1d5ded7b20ab715bc7952a4
+MISC ChangeLog 339 RMD160 4c4b1cc4e0e86cd7b109990d7b2507042c33939b SHA1 8b47ec918c3dc338819d30d77fb555aa1fbf55cd SHA256 15dba493ea39b80e0566ef39ae19e7fe5fc077304059d8eb92c13554bd484faf
